--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <title>客戶儲值帳本 A1.2.1</title>
+  <title>客戶儲值帳本 A1.3.1</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#2e7d32">
   <link rel="apple-touch-icon" href="icons/icon-192.png">
   <link rel="stylesheet" href="styles.css">
   <script defer src="db.js"></script>
   <script defer src="export.js"></script>
+  <script defer src="import.js"></script>
   <script defer src="app.js"></script>
 </head>
 <body>
 <header class="appbar">
   <h1>客戶</h1>
+  <div class="spacer"></div>
+  <button id="btnBackupAll" class="ghost">全站備份</button>
   <button id="btnInstall" class="ghost" hidden>安裝</button>
 </header>
+
+<div id="backupBanner" class="banner" hidden>
+  <div>🔔 提醒：請定期「匯出 CSV / JSON」備份資料（刪除 App/書籤會清空本機資料）。</div>
+  <button id="btnDismissBanner" class="ghost small">知道了</button>
+</div>
 
 <main id="screen-list" class="screen active">
   <div class="search-row">
@@ -30,7 +38,9 @@
   <nav class="toolbar">
     <button id="btnBack">← 返回</button>
     <div class="spacer"></div>
-    <button id="btnExport">匯出CSV</button>
+    <button id="btnImport" class="ghost">匯入CSV</button>
+    <button id="btnExport" class="ghost">匯出交易CSV</button>
+    <button id="btnExportInterviews" class="ghost">匯出訪談CSV</button>
     <button id="btnDeleteCustomer" class="danger">刪除</button>
   </nav>
 
@@ -70,68 +80,73 @@
   </section>
 </main>
 
-<!-- dialogs -->
-<dialog id="dlgCustomer">
-  <form method="dialog" class="dialog">
-    <h3 id="dlgCustomerTitle">新增客戶</h3>
-    <label>姓名 <input id="cName" required maxlength="40"></label>
-    <label>電話（可略） <input id="cPhone" maxlength="30"></label>
-    <label>LINE ID（可略） <input id="cLineId" maxlength="64"></label>
-    <label>備註（可略） <input id="cNote" maxlength="200"></label>
-    <menu>
-      <button value="cancel">取消</button>
-      <button id="btnSaveCustomer" value="ok" class="primary">儲存</button>
-    </menu>
-  </form>
-</dialog>
+<dialog id="dlgCustomer"><form method="dialog" class="dialog">
+  <h3 id="dlgCustomerTitle">新增客戶</h3>
+  <label>姓名 <input id="cName" required maxlength="40"></label>
+  <label>電話（可略） <input id="cPhone" maxlength="30"></label>
+  <label>LINE ID（可略） <input id="cLineId" maxlength="64"></label>
+  <label>備註（可略） <input id="cNote" maxlength="200"></label>
+  <menu><button value="cancel">取消</button><button id="btnSaveCustomer" value="ok" class="primary">儲存</button></menu>
+</form></dialog>
 
-<dialog id="dlgTxn">
-  <form method="dialog" class="dialog">
-    <h3 id="dlgTxnTitle">交易</h3>
-    <label>金額（正數） <input id="tAmount" inputmode="decimal" required></label>
-    <label>備註（可略） <input id="tNote" maxlength="200"></label>
-    <menu>
-      <button value="cancel">取消</button>
-      <button id="btnSaveTxn" value="ok" class="primary">確定</button>
-    </menu>
-  </form>
-</dialog>
+<dialog id="dlgTxn"><form method="dialog" class="dialog">
+  <h3 id="dlgTxnTitle">交易</h3>
+  <label>金額（正數） <input id="tAmount" inputmode="decimal" required></label>
+  <label>備註（可略） <input id="tNote" maxlength="200"></label>
+  <menu><button value="cancel">取消</button><button id="btnSaveTxn" value="ok" class="primary">確定</button></menu>
+</form></dialog>
 
-<dialog id="dlgInterview">
-  <form method="dialog" class="dialog">
-    <h3>新增訪談紀錄</h3>
-    <label>主題 <input id="iTopic" required maxlength="100" placeholder="例：療程後回饋"></label>
-    <label>內容 <textarea id="iContent" rows="6" placeholder="重點、問題、客戶需求…"></textarea></label>
-    <label>後續追蹤事項（可略） <input id="iNext" maxlength="120" placeholder="例：下週三回電確認"></label>
-    <menu>
-      <button value="cancel">取消</button>
-      <button id="btnSaveInterview" value="ok" class="primary">儲存</button>
-    </menu>
-  </form>
-</dialog>
+<dialog id="dlgInterview"><form method="dialog" class="dialog">
+  <h3>新增訪談紀錄</h3>
+  <label>主題 <input id="iTopic" required maxlength="100" placeholder="例：療程後回饋"></label>
+  <label>內容 <textarea id="iContent" rows="6" placeholder="重點、問題、客戶需求…"></textarea></label>
+  <label>後續追蹤事項（可略） <input id="iNext" maxlength="120" placeholder="例：下週三回電確認"></label>
+  <menu><button value="cancel">取消</button><button id="btnSaveInterview" value="ok" class="primary">儲存</button></menu>
+</form></dialog>
 
-<footer class="footnote">
-  <small>離線可用・資料儲存在本機 IndexedDB・請定期用「匯出CSV」備份</small>
-</footer>
+<dialog id="dlgImportResult"><form method="dialog" class="dialog">
+  <h3>匯入完成</h3>
+  <p id="importSummary" class="muted"></p>
+  <menu><button value="ok" class="primary">關閉</button></menu>
+</form></dialog>
+
+<dialog id="dlgBackupAll"><form method="dialog" class="dialog">
+  <h3>全站備份</h3>
+  <p class="muted">選擇你要備份的內容：</p>
+  <div class="row">
+    <button id="btnBackupTxns" class="primary wide">全部交易（CSV）</button>
+    <button id="btnBackupInterviews" class="wide">全部訪談（CSV）</button>
+  </div>
+  <div class="row">
+    <button id="btnBackupJSON" class="ghost wide">完整資料（JSON）</button>
+  </div>
+  <menu><button value="cancel">關閉</button></menu>
+</form></dialog>
+
+<input id="fileImport" type="file" accept=".csv,text/csv" hidden />
+
+<footer class="footnote"><small>離線可用・資料儲存在本機 IndexedDB・請定期用「匯出CSV/JSON」備份到雲端或檔案 App</small></footer>
 
 <script>
 let deferredPrompt;
 window.addEventListener('beforeinstallprompt', (e)=>{
-  e.preventDefault();
-  deferredPrompt = e;
-  const b = document.getElementById('btnInstall');
-  b.hidden = false;
+  e.preventDefault(); deferredPrompt = e;
+  const b = document.getElementById('btnInstall'); b.hidden = false;
 });
 document.addEventListener('DOMContentLoaded', ()=>{
   const b = document.getElementById('btnInstall');
-  b.addEventListener('click', async ()=>{
-    b.hidden = true;
-    if (deferredPrompt) { deferredPrompt.prompt(); deferredPrompt = null; }
-  });
+  b.addEventListener('click', async ()=>{ b.hidden = true; if (deferredPrompt) { deferredPrompt.prompt(); deferredPrompt = null; } });
+  // backup banner
+  try{
+    const key='sv_backup_banner_dismissed_at'; const days=7; const now=Date.now();
+    const last = Number(localStorage.getItem(key)||0);
+    if (!last || (now-last)>days*24*60*60*1000){ document.getElementById('backupBanner').hidden=false; }
+    document.getElementById('btnDismissBanner').addEventListener('click', ()=>{
+      localStorage.setItem(key, String(Date.now()));
+      document.getElementById('backupBanner').hidden=true;
+    });
+  }catch(e){}
 });
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('./service-worker.js').catch(()=>{});
-}
+if ('serviceWorker' in navigator){ navigator.serviceWorker.register('./service-worker.js').catch(()=>{}); }
 </script>
-</body>
-</html>
+</body></html>
