--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!doctype html>
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
-  <title>客戶儲值帳本 A1.3.3</title>
+  <title>客戶儲值帳本 A1.3.3e</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#2e7d32">
   <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
@@ -94,11 +95,17 @@
 </form></dialog>
 
 <dialog id="dlgInterview"><form method="dialog" class="dialog">
-  <h3>新增訪談紀錄</h3>
+  <h3 id="dlgInterviewTitle">新增訪談紀錄</h3>
+  <label>日期時間 <input id="iWhen" type="datetime-local"></label>
   <label>主題 <input id="iTopic" required maxlength="100" placeholder="例：療程後回饋"></label>
   <label>內容 <textarea id="iContent" rows="6" placeholder="重點、問題、客戶需求…"></textarea></label>
   <label>後續追蹤事項（可略） <input id="iNext" maxlength="120" placeholder="例：下週三回電確認"></label>
-  <menu><button value="cancel" type="button">取消</button><button id="btnSaveInterview" value="ok" class="primary">儲存</button></menu>
+  <div class="muted" id="iMeta" style="font-size:12px;"></div>
+  <menu>
+    <button id="btnDeleteInterview" class="danger" type="button" style="margin-right:auto; display:none;">刪除</button>
+    <button value="cancel" type="button">取消</button>
+    <button id="btnSaveInterview" value="ok" class="primary" type="button">儲存</button>
+  </menu>
 </form></dialog>
 
 <dialog id="dlgImportResult"><form method="dialog" class="dialog">
